# claude-code-anthropic-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py  curl_examples.sh  streaming_example.py
src/: __init__.py  main.py
src/api/: messages.py  models.py
src/core/: claude_client.py  config.py
src/middleware/: __init__.py  path_prefix.py
src/models/: __init__.py  anthropic.py
src/utils/: __init__.py  error_handling.py  loguru_utils.py  streaming.py
tests/: test_claude_client.py  test_config.py  test_error_handling.py  test_main.py  test_messages_api.py  test_models.py  test_models_api.py  test_path_prefix.py  test_streaming.py  test_system_parameter.py
